--- a/Analysis of games sales/Анализ_данных_о_продажах_игр_интернет_магазина.ipynb
+++ b/Analysis of games sales/Анализ_данных_о_продажах_игр_интернет_магазина.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Alexander-1380/Yandex_practicum/blob/main/%D0%90%D0%BD%D0%B0%D0%BB%D0%B8%D0%B7_%D0%B4%D0%B0%D0%BD%D0%BD%D1%8B%D1%85_%D0%BE_%D0%BF%D1%80%D0%BE%D0%B4%D0%B0%D0%B6%D0%B0%D1%85_%D0%B8%D0%B3%D1%80_%D0%B8%D0%BD%D1%82%D0%B5%D1%80%D0%BD%D0%B5%D1%82_%D0%BC%D0%B0%D0%B3%D0%B0%D0%B7%D0%B8%D0%BD%D0%B0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Alexander-1380/Yandex_practicum/blob/main/Analysis%20of%20games%20sales/%D0%90%D0%BD%D0%B0%D0%BB%D0%B8%D0%B7_%D0%B4%D0%B0%D0%BD%D0%BD%D1%8B%D1%85_%D0%BE_%D0%BF%D1%80%D0%BE%D0%B4%D0%B0%D0%B6%D0%B0%D1%85_%D0%B8%D0%B3%D1%80_%D0%B8%D0%BD%D1%82%D0%B5%D1%80%D0%BD%D0%B5%D1%82_%D0%BC%D0%B0%D0%B3%D0%B0%D0%B7%D0%B8%D0%BD%D0%B0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -17,13 +17,12 @@
         "id": "3e52e4e9"
       },
       "source": [
-        "# Сборный проект - Анализ данных о продажах игр интернет-магазина (проект выполнен в рамках обучения в Яндекс Практикуме)\n",
+        "# Анализ данных о продажах игр для интернет-магазина (проект выполнен в рамках обучения в Яндекс Практикуме)\n",
         "\n",
-        "### Описание проекта\n",
+        "### Задача проекта\n",
         "\n",
-        "Вы работаете в интернет-магазине «Стримчик», который продаёт по всему миру компьютерные игры. Из открытых источников доступны исторические данные о продажах игр, оценки пользователей и экспертов, жанры и платформы (например, Xbox или PlayStation). Вам нужно выявить определяющие успешность игры закономерности. Это позволит сделать ставку на потенциально популярный продукт и спланировать рекламные кампании.<br>\n",
-        "Перед вами данные до 2016 года. Представим, что сейчас декабрь 2016 г., и вы планируете кампанию на 2017-й. Нужно отработать принцип работы с данными. Неважно, прогнозируете ли вы продажи на 2017 год по данным 2016-го или же 2027-й — по данным 2026 года.<br>\n",
-        "В наборе данных попадается аббревиатура ESRB (Entertainment Software Rating Board) — это ассоциация, определяющая возрастной рейтинг компьютерных игр. ESRB оценивает игровой контент и присваивает ему подходящую возрастную категорию, например, «Для взрослых», «Для детей младшего возраста» или «Для подростков».\n",
+        "Из открытых источников доступны исторические данные о продажах игр, оценки пользователей и экспертов, жанры и платформы (например, Xbox или PlayStation). Нужно выявить определяющие успешность игры закономерности. Это позволит сделать ставку на потенциально популярный продукт и спланировать рекламные кампании.<br>\n",
+        "Имеются данные до 2016 года. На момент декабря 2016 г. планируется кампания на 2017-й.\n",
         "\n",
         "\n",
         "### Описание данных\n",
@@ -50,7 +49,7 @@
         "id": "652e1360"
       },
       "source": [
-        "### Шаг 1. Откройте файл с данными и изучите общую информацию"
+        "### Шаг 1. Откроем файл с данными и изучите общую информацию"
       ]
     },
     {
@@ -523,14 +522,7 @@
         "id": "06fc2f39"
       },
       "source": [
-        "### Шаг 2. Подготовьте данные\n",
-        "- Замените названия столбцов (приведите к нижнему регистру);\n",
-        "- Преобразуйте данные в нужные типы. Опишите, в каких столбцах заменили тип данных и почему;\n",
-        "- Обработайте пропуски при необходимости:\n",
-        "- Объясните, почему заполнили пропуски определённым образом или почему не стали это делать;\n",
-        "- Опишите причины, которые могли привести к пропускам;\n",
-        "- Обратите внимание на аббревиатуру 'tbd' в столбце с оценкой пользователей. Отдельно разберите это значение и опишите, как его обработать;\n",
-        "- Посчитайте суммарные продажи во всех регионах и запишите их в отдельный столбец."
+        "### Шаг 2. Подготовим данные"
       ]
     },
     {
@@ -1642,7 +1634,7 @@
         "id": "2300d302"
       },
       "source": [
-        "#### 2.4 Объясните, почему заполнили пропуски определённым образом или почему не стали это делать\n"
+        "#### 2.4 Объясним, почему заполнили пропуски определённым образом или почему не стали это делать\n"
       ]
     },
     {
@@ -1726,7 +1718,7 @@
         "id": "c11caa03"
       },
       "source": [
-        "#### 2.5 Опишите причины, которые могли привести к пропускам"
+        "#### 2.5 Причины, которые могли привести к пропускам"
       ]
     },
     {
@@ -1747,7 +1739,7 @@
         "id": "8c6aeac8"
       },
       "source": [
-        "#### 2.6 Обратите внимание на аббревиатуру 'tbd' в столбце с оценкой пользователей. Отдельно разберите это значение и опишите, как его обработать"
+        "#### 2.6 Обратим внимание на аббревиатуру 'tbd' в столбце с оценкой пользователей. Опишем, как его обработать"
       ]
     },
     {
@@ -2406,7 +2398,7 @@
         "id": "67472a12"
       },
       "source": [
-        "#### 2.7 Посчитайте суммарные продажи во всех регионах и запишите их в отдельный столбец."
+        "#### 2.7 Посчитаем суммарные продажи во всех регионах и запишем их в отдельный столбец."
       ]
     },
     {
@@ -2761,16 +2753,7 @@
         "id": "d43836c4"
       },
       "source": [
-        "### Шаг 3. Проведите исследовательский анализ данных\n",
-        "- Посмотрите, сколько игр выпускалось в разные годы. Важны ли данные за все периоды?<br>\n",
-        "- Посмотрите, как менялись продажи по платформам. Выберите платформы с наибольшими суммарными продажами и постройте распределение по годам. За какой характерный срок появляются новые и исчезают старые платформы?<br>\n",
-        "- Возьмите данные за соответствующий актуальный период. Актуальный период определите самостоятельно в результате исследования предыдущих вопросов. Основной фактор — эти данные помогут построить прогноз на 2017 год.<br>\n",
-        "- Не учитывайте в работе данные за предыдущие годы.<br>\n",
-        "- Какие платформы лидируют по продажам, растут или падают? Выберите несколько потенциально прибыльных платформ.<br>\n",
-        "- Постройте график «ящик с усами» по глобальным продажам игр в разбивке по платформам. Опишите результат.<br>\n",
-        "- Посмотрите, как влияют на продажи внутри одной популярной платформы отзывы пользователей и критиков. Постройте диаграмму рассеяния и посчитайте корреляцию между отзывами и продажами. Сформулируйте выводы.<br>\n",
-        "- Соотнесите выводы с продажами игр на других платформах.<br>\n",
-        "- Посмотрите на общее распределение игр по жанрам. Что можно сказать о самых прибыльных жанрах? Выделяются ли жанры с высокими и низкими продажами?<br>"
+        "### Шаг 3. Исследовательский анализ данных\n"
       ]
     },
     {
@@ -2780,7 +2763,7 @@
         "id": "6666ee49"
       },
       "source": [
-        "#### 3.1 Посмотрите, сколько игр выпускалось в разные годы. Важны ли данные за все периоды?"
+        "#### 3.1 Посмотрим, сколько игр выпускалось в разные годы. Важны ли данные за все периоды?"
       ]
     },
     {
@@ -2875,7 +2858,7 @@
         "id": "bf777fc3"
       },
       "source": [
-        "#### 3.2 Посмотрите, как менялись продажи по платформам. Выберите платформы с наибольшими суммарными продажами и постройте распределение по годам. За какой характерный срок появляются новые и исчезают старые платформы?"
+        "#### 3.2 Посмотрим, как менялись продажи по платформам. Выберем платформы с наибольшими суммарными продажами и построим распределение по годам. За какой характерный срок появляются новые и исчезают старые платформы?"
       ]
     },
     {
@@ -3297,7 +3280,7 @@
         "id": "cde90a10"
       },
       "source": [
-        "#### 3.3 Возьмите данные за соответствующий актуальный период. Актуальный период определите самостоятельно в результате исследования предыдущих вопросов. Основной фактор — эти данные помогут построить прогноз на 2017 год."
+        "#### 3.3 Возьмем данные за соответствующий актуальный период."
       ]
     },
     {
@@ -3317,7 +3300,7 @@
         "id": "a47baf3b"
       },
       "source": [
-        "#### 3.4 Не учитывайте в работе данные за предыдущие годы."
+        "#### 3.4 Не будем учитывать в работе данные за предыдущие годы."
       ]
     },
     {
@@ -3605,7 +3588,7 @@
         "id": "3c0545b8"
       },
       "source": [
-        "#### 3.5 Какие платформы лидируют по продажам, растут или падают? Выберите несколько потенциально прибыльных платформ."
+        "#### 3.5 Какие платформы лидируют по продажам, растут или падают? Выберем несколько потенциально прибыльных платформ."
       ]
     },
     {
@@ -3783,7 +3766,7 @@
         "id": "00652011"
       },
       "source": [
-        "#### 3.6 Постройте график «ящик с усами» по глобальным продажам игр в разбивке по платформам. Опишите результат."
+        "#### 3.6 Построим график «ящик с усами» по глобальным продажам игр в разбивке по платформам."
       ]
     },
     {
@@ -3933,7 +3916,7 @@
         "id": "1784e0c3"
       },
       "source": [
-        "#### 3.7 Посмотрите, как влияют на продажи внутри одной популярной платформы отзывы пользователей и критиков. Постройте диаграмму рассеяния и посчитайте корреляцию между отзывами и продажами. Сформулируйте выводы."
+        "#### 3.7 Посмотрим, как влияют на продажи внутри одной популярной платформы отзывы пользователей и критиков. Построим диаграмму рассеяния и посчитаем корреляцию между отзывами и продажами."
       ]
     },
     {
@@ -3994,7 +3977,7 @@
         "id": "fac070f9"
       },
       "source": [
-        "#### 3.8 Соотнесите выводы с продажами игр на других платформах."
+        "#### 3.8 Соотнесем выводы с продажами игр на других платформах."
       ]
     },
     {
@@ -4092,7 +4075,7 @@
         "id": "bff82813"
       },
       "source": [
-        "#### 3.9 Посмотрите на общее распределение игр по жанрам. Что можно сказать о самых прибыльных жанрах? Выделяются ли жанры с высокими и низкими продажами?"
+        "#### 3.9 Посмотрим на общее распределение игр по жанрам. Что можно сказать о самых прибыльных жанрах? Выделяются ли жанры с высокими и низкими продажами?"
       ]
     },
     {
@@ -4416,10 +4399,10 @@
         "id": "bb34f4f4"
       },
       "source": [
-        "### Шаг 4. Составьте портрет пользователя каждого региона\n",
-        "Определите для пользователя каждого региона (NA, EU, JP):<br>\n",
-        "Самые популярные платформы (топ-5). Опишите различия в долях продаж.<br>\n",
-        "Самые популярные жанры (топ-5). Поясните разницу.<br>\n",
+        "### Шаг 4. Составим портрет пользователя каждого региона\n",
+        "Определим для пользователя каждого региона (NA, EU, JP):<br>\n",
+        "Самые популярные платформы (топ-5). Опишем различия в долях продаж.<br>\n",
+        "Самые популярные жанры (топ-5). <br>\n",
         "Влияет ли рейтинг ESRB на продажи в отдельном регионе?"
       ]
     },
@@ -4430,7 +4413,7 @@
         "id": "19d81854"
       },
       "source": [
-        "#### 4.1 Самые популярные платформы (топ-5). Опишите различия в долях продаж."
+        "#### 4.1 Самые популярные платформы (топ-5). Опишием различия в долях продаж."
       ]
     },
     {
@@ -4526,7 +4509,7 @@
         "id": "47f2c9ab"
       },
       "source": [
-        "#### 4.2 Самые популярные жанры (топ-5). Поясните разницу."
+        "#### 4.2 Самые популярные жанры (топ-5)."
       ]
     },
     {
@@ -4822,7 +4805,7 @@
         "id": "061572b5"
       },
       "source": [
-        "### Шаг 5. Проверьте гипотезы\n",
+        "### Шаг 5. Проверим гипотезы\n",
         "- Средние пользовательские рейтинги платформ Xbox One и PC одинаковые;<br>\n",
         "- Средние пользовательские рейтинги жанров Action (англ. «действие», экшен-игры) и Sports (англ. «спортивные соревнования») разные.<br>\n",
         "\n",
@@ -5031,38 +5014,6 @@
         "### Шаг 6. Общий вывод:\n",
         "\n",
         "\n",
-        "Для исследования предоставлен датафрейм о реализации игр из открытых источников, состоящий из 16715 строк и 11 колонок\n",
-        "\n",
-        "Названия столбцов для удобства были приведены к нижнему регистру.<br>\n",
-        "\n",
-        "В столбцах critic_score, user_score пропуски составляют 51.5% и 54.6% соответственно.<br>\n",
-        "Предположим что для этих игр не были доступны ресурсы с рейтингами и оценками. Данные с пропусками не были удалены во избежание искажения данных для исследования.<br>\n",
-        "\n",
-        "Пропуски в столбце rating объединили в отдельную категорию 'Unknown'.\n",
-        "\n",
-        "Пропуски в столбце year_of_release составляли 1,6%, они могли возникнуть из-за разных дат релиза игры в разных частях света. Эти данные были удалены без вреда для массива.<br>\n",
-        "\n",
-        "Пропуски в столбцах name и genre составляли менее 0.0001%, могли возникнуть из-за ошибки в заполнении таблицы. Эти данные также были удалены без вреда для массива.<br>\n",
-        "\n",
-        "Был добавлен столбец с данными по суммарным продажам игр во всех частях света.<br>\n",
-        "\n",
-        "После удаления строк с пропусками получили датафрейм на 16 444 строк и 12 столбцов.<br>\n",
-        "\n",
-        "### Описание данных\n",
-        "\n",
-        "<b>name</b> — название игры<br>\n",
-        "<b>platform</b> — платформа<br>\n",
-        "<b>year_of_release</b> — год выпуска<br>\n",
-        "<b>genre</b> — жанр игры<br>\n",
-        "<b>na_sales</b> — продажи в Северной Америке (миллионы проданных копий)<br>\n",
-        "<b>eu_sales</b> — продажи в Европе (миллионы проданных копий)<br>\n",
-        "<b>jp_sales</b> — продажи в Японии (миллионы проданных копий)<br>\n",
-        "<b>other_sales</b> — продажи в других странах (миллионы проданных копий)<br>\n",
-        "<b>critic_score</b> — оценка критиков (максимум 100)<br>\n",
-        "<b>user_score</b> — оценка пользователей (максимум 10)<br>\n",
-        "<b>rating</b> — рейтинг от организации ESRB (англ. Entertainment Software Rating Board). Эта ассоциация определяет рейтинг компьютерных игр и присваивает им подходящую возрастную категорию.<br>\n",
-        "<b>total_sales</b> - суммарные продажи (миллионы проданных копий)<br>\n",
-        "\n",
         "Наблюдаем явный тренд роста количества выпускаемых игр с 1994 года. Наиболее важный для исследования период считаем с этого года.<br>\n",
         "\n",
         "Среди 10 платформ с наибольшим числом продаж новые платформы появляются и исчезают старые в среднем за период в 10 лет.<br>\n",
@@ -5142,6 +5093,16 @@
         "###  Гипотеза 02: Средние пользовательские рейтинги жанров Action (англ. «действие», экшен-игры) и Sports (англ. «спортивные соревнования») разные.\n",
         "Вывод: согласно исследованию, гипотеза о том, что средние пользовательские рейтинги жанров Action и Sports не равны не подтвердилась. Скорее всего, средние значения равны."
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "m-mQygoMlYaV"
+      },
+      "id": "m-mQygoMlYaV",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
