Создано с помощью Colaboratory

--- a/Analysis_app's_business_metrics/Анализ_бизнес_показателей_приложения.ipynb
+++ b/Analysis_app's_business_metrics/Анализ_бизнес_показателей_приложения.ipynb
@@ -19,9 +19,11 @@
       "source": [
         "# Анализ бизнес-показателей приложения (проект выполнен в рамках обучения в Яндекс Практикуме)\n",
         "\n",
-        "### Описание проекта\n",
+        "### Задача проекта\n",
         "\n",
-        "Задача — разобраться в причинах убытков рекламных кампаний развлекательного приложения.<br>\n",
+        "Разобраться в причинах убытков рекламных кампаний развлекательного приложения.<br>\n",
+        "\n",
+        "### Описание проекта\n",
         "\n",
         "Есть данные о пользователях, привлечённых с 1 мая по 27 октября 2019 года:\n",
         "- лог сервера с данными об их посещениях,<br>\n",
@@ -512,9 +514,8 @@
         "id": "c3be4689"
       },
       "source": [
-        "### Задайте функции для расчёта и анализа LTV, ROI, удержания и конверсии.\n",
+        "### Зададим функции для расчёта и анализа LTV, ROI, удержания и конверсии.\n",
         "\n",
-        "Разрешается использовать функции, с которыми вы познакомились в теоретических уроках.\n",
         "\n",
         "Это функции для вычисления значений метрик:\n",
         "\n",
@@ -1125,12 +1126,10 @@
       "source": [
         "### Исследовательский анализ данных\n",
         "\n",
-        "- Составьте профили пользователей. Определите минимальную и максимальную даты привлечения пользователей.\n",
-        "- Выясните, из каких стран пользователи приходят в приложение и на какую страну приходится больше всего платящих пользователей. Постройте таблицу, отражающую количество пользователей и долю платящих из каждой страны.\n",
-        "- Узнайте, какими устройствами пользуются клиенты и какие устройства предпочитают платящие пользователи. Постройте таблицу, отражающую количество пользователей и долю платящих для каждого устройства.\n",
-        "- Изучите рекламные источники привлечения и определите каналы, из которых пришло больше всего платящих пользователей. Постройте таблицу, отражающую количество пользователей и долю платящих для каждого канала привлечения.\n",
-        "\n",
-        "После каждого пункта сформулируйте выводы."
+        "- Составим профили пользователей. Определим минимальную и максимальную даты привлечения пользователей.\n",
+        "- Выясним, из каких стран пользователи приходят в приложение и на какую страну приходится больше всего платящих пользователей. Построим таблицу, отражающую количество пользователей и долю платящих из каждой страны.\n",
+        "- Определим, какими устройствами пользуются клиенты и какие устройства предпочитают платящие пользователи. Построим таблицу, отражающую количество пользователей и долю платящих для каждого устройства.\n",
+        "- Изучим рекламные источники привлечения и определите каналы, из которых пришло больше всего платящих пользователей. Построим таблицу, отражающую количество пользователей и долю платящих для каждого канала привлечения.\n"
       ]
     },
     {
@@ -2147,21 +2146,21 @@
         "id": "4126037d"
       },
       "source": [
-        "### Оцените окупаемость рекламы\n",
+        "### Оценим окупаемость рекламы\n",
         "\n",
-        "Используя графики LTV, ROI и CAC, проанализируйте окупаемость рекламы. Считайте, что на календаре 1 ноября 2019 года, а в бизнес-плане заложено, что пользователи должны окупаться не позднее чем через две недели после привлечения. Необходимость включения в анализ органических пользователей определите самостоятельно.\n",
+        "Используя графики LTV, ROI и CAC, проанализируем окупаемость рекламы.\n",
         "\n",
-        "- Проанализируйте окупаемость рекламы c помощью графиков LTV и ROI, а также графики динамики LTV, CAC и ROI.\n",
-        "- Проверьте конверсию пользователей и динамику её изменения. То же самое сделайте с удержанием пользователей. Постройте и изучите графики конверсии и удержания.\n",
-        "- Проанализируйте окупаемость рекламы с разбивкой по устройствам. Постройте графики LTV и ROI, а также графики динамики LTV, CAC и ROI.\n",
-        "- Проанализируйте окупаемость рекламы с разбивкой по странам. Постройте графики LTV и ROI, а также графики динамики LTV, CAC и ROI.\n",
-        "- Проанализируйте окупаемость рекламы с разбивкой по рекламным каналам. Постройте графики LTV и ROI, а также графики динамики LTV, CAC и ROI.\n",
-        "- Ответьте на такие вопросы:\n",
+        "- Проанализируем окупаемость рекламы c помощью графиков LTV и ROI, а также графики динамики LTV, CAC и ROI.\n",
+        "- Проверим конверсию пользователей и динамику её изменения. То же самое сделаем с удержанием пользователей. Построим и изучим графики конверсии и удержания.\n",
+        "- Проанализируем окупаемость рекламы с разбивкой по устройствам. Построим графики LTV и ROI, а также графики динамики LTV, CAC и ROI.\n",
+        "- Проанализируем окупаемость рекламы с разбивкой по странам. Построим графики LTV и ROI, а также графики динамики LTV, CAC и ROI.\n",
+        "- Проанализируем окупаемость рекламы с разбивкой по рекламным каналам. Построим графики LTV и ROI, а также графики динамики LTV, CAC и ROI.\n",
+        "- Ответим на такие вопросы:\n",
         "    - Окупается ли реклама, направленная на привлечение пользователей в целом?\n",
         "    - Какие устройства, страны и рекламные каналы могут оказывать негативное влияние на окупаемость рекламы?\n",
         "    - Чем могут быть вызваны проблемы окупаемости?\n",
         "\n",
-        "Напишите вывод, опишите возможные причины обнаруженных проблем и промежуточные рекомендации для рекламного отдела."
+        "Напишем вывод, опишите возможные причины обнаруженных проблем и промежуточные рекомендации для рекламного отдела."
       ]
     },
     {
@@ -3145,19 +3144,6 @@
         "Наблюдаем, что не окупается реклама в каналах AdNonSense, FaceBoom и TipTop. При этом TipTop перестал окупаться именно с июня 2019 года из-за резкого роста стоимости привлечения пользователей. <br>\n",
         "Стоимость привлечения пользователей по другим каналам значительно не менялась на протяжении всего исследуемого периода.<br>\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "a04ffd00",
-      "metadata": {
-        "id": "a04ffd00"
-      },
-      "source": [
-        "### Напишите выводы\n",
-        "\n",
-        "- Выделите причины неэффективности привлечения пользователей.\n",
-        "- Сформулируйте рекомендации для отдела маркетинга."
       ]
     },
     {
