Создано с помощью Colaboratory

--- a/Analysis_AB_test_results/Анализ_результатов_A_B_теста_ipynb".ipynb
+++ b/Analysis_AB_test_results/Анализ_результатов_A_B_теста_ipynb".ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Alexander-1380/Yandex_practicum/blob/main/%D0%90%D0%BD%D0%B0%D0%BB%D0%B8%D0%B7_%D1%80%D0%B5%D0%B7%D1%83%D0%BB%D1%8C%D1%82%D0%B0%D1%82%D0%BE%D0%B2_A_B_%D1%82%D0%B5%D1%81%D1%82%D0%B0_ipynb%22.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Alexander-1380/Yandex_practicum/blob/main/Analysis_AB_test_results/%D0%90%D0%BD%D0%B0%D0%BB%D0%B8%D0%B7_%D1%80%D0%B5%D0%B7%D1%83%D0%BB%D1%8C%D1%82%D0%B0%D1%82%D0%BE%D0%B2_A_B_%D1%82%D0%B5%D1%81%D1%82%D0%B0_ipynb%22.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -27,43 +27,14 @@
         "id": "d710cbde"
       },
       "source": [
-        "# Описание данных\n",
-        "\n",
-        "### Данные для первой части\n",
-        "\n",
-        "Файл /datasets/hypothesis.csv.\n",
-        "- Hypothesis — краткое описание гипотезы;\n",
-        "- Reach — охват пользователей по 10-балльной шкале;\n",
-        "- Impact — влияние на пользователей по 10-балльной шкале;\n",
-        "- Confidence — уверенность в гипотезе по 10-балльной шкале;\n",
-        "- Efforts — затраты ресурсов на проверку гипотезы по 10-балльной шкале. Чем больше значение Efforts, тем дороже проверка гипотезы.\n",
-        "\n",
-        "\n",
-        "### Данные для второй части\n",
-        "\n",
-        "Файл /datasets/orders.csv.\n",
-        "- transactionId — идентификатор заказа;\n",
-        "- visitorId — идентификатор пользователя, совершившего заказ;\n",
-        "- date — дата, когда был совершён заказ;\n",
-        "- revenue — выручка заказа;\n",
-        "- group — группа A/B-теста, в которую попал заказ.\n",
-        "\n",
-        "- date — дата;\n",
-        "- group — группа A/B-теста;\n",
-        "- visitors — количество пользователей в указанную дату в указанной группе A/B-теста\n",
-        "\n",
-        "\n",
         "### Описание проекта\n",
         "\n",
-        "### Контекст\n",
+        "Используя данные интернет-магазина приоритезировать гипотезы, произвести оценку результатов A/B-тестирования, проанализировать результаты.\n",
         "\n",
-        "Вы — аналитик крупного интернет-магазина. Вместе с отделом маркетинга вы подготовили список гипотез для увеличения выручки.\n",
-        "\n",
-        "Приоритизируйте гипотезы, запустите A/B-тест и проанализируйте результаты.\n",
         "\n",
         "## Часть 1. Приоритизация гипотез.\n",
         "\n",
-        "В файле /datasets/hypothesis.csv 9 гипотез по увеличению выручки интернет-магазина с указанными параметрами Reach, Impact, Confidence, Effort.\n",
+        "В файле данных 9 гипотез по увеличению выручки интернет-магазина с указанными параметрами Reach, Impact, Confidence, Effort.\n",
         "\n",
         "### Задача\n",
         "Примените фреймворк ICE для приоритизации гипотез. Отсортируйте их по убыванию приоритета.<br>\n",
@@ -72,25 +43,25 @@
         "\n",
         "## Часть 2. Анализ A/B-теста\n",
         "\n",
-        "Вы провели A/B-тест и получили результаты, которые описаны в файлах /datasets/orders.csv и /datasets/visitors.csv.\n",
+        "Проведен A/B-тест и получены результаты, которые описаны в двух датафреймах.\n",
         "\n",
         "### Задача\n",
-        "Проанализируйте A/B-тест:<br>\n",
-        "Постройте график кумулятивной выручки по группам. Сделайте выводы и предположения.<br>\n",
-        "Постройте график кумулятивного среднего чека по группам. Сделайте выводы и предположения.<br>\n",
-        "Постройте график относительного изменения кумулятивного среднего чека группы B к группе A. Сделайте выводы и предположения.<br>\n",
-        "Постройте график кумулятивного среднего количества заказов на посетителя по группам. Сделайте выводы и предположения.<br>\n",
-        "Постройте график относительного изменения кумулятивного среднего количества заказов на посетителя группы B к группе A. Сделайте выводы и предположения.<br>\n",
-        "Постройте точечный график количества заказов по пользователям. Сделайте выводы и предположения.<br>\n",
-        "Посчитайте 95-й и 99-й перцентили количества заказов на пользователя. Выберите границу для определения аномальных пользователей.<br>\n",
-        "Постройте точечный график стоимостей заказов. Сделайте выводы и предположения.<br>\n",
-        "Посчитайте 95-й и 99-й перцентили стоимости заказов. Выберите границу для определения аномальных заказов.<br>\n",
-        "Посчитайте статистическую значимость различий в среднем количестве заказов на посетителя между группами по «сырым» данным. Сделайте выводы и предположения.<br>\n",
-        "Посчитайте статистическую значимость различий в среднем чеке заказа между группами по «сырым» данным. Сделайте выводы и предположения.<br>\n",
-        "Посчитайте статистическую значимость различий в среднем количестве заказов на посетителя между группами по «очищенным» данным. Сделайте выводы и предположения.<br>\n",
-        "Посчитайте статистическую значимость различий в среднем чеке заказа между группами по «очищенным» данным. Сделайте выводы и предположения.<br>\n",
+        "Проанализировать A/B-тест:<br>\n",
+        "Построить график кумулятивной выручки по группам. Сделать выводы и предположения.<br>\n",
+        "Построить график кумулятивного среднего чека по группам. Сделать выводы и предположения.<br>\n",
+        "Построить график относительного изменения кумулятивного среднего чека группы B к группе A. Сделать выводы и предположения.<br>\n",
+        "Построить график кумулятивного среднего количества заказов на посетителя по группам. Сделать выводы и предположения.<br>\n",
+        "Построить график относительного изменения кумулятивного среднего количества заказов на посетителя группы B к группе A. Сделать выводы и предположения.<br>\n",
+        "Построить точечный график количества заказов по пользователям. Сделать выводы и предположения.<br>\n",
+        "Посчитать 95-й и 99-й перцентили количества заказов на пользователя. Выбрать границу для определения аномальных пользователей.<br>\n",
+        "Построить точечный график стоимостей заказов. Сделать выводы и предположения.<br>\n",
+        "Посчитать 95-й и 99-й перцентили стоимости заказов. Выбрать границу для определения аномальных заказов.<br>\n",
+        "Посчитать статистическую значимость различий в среднем количестве заказов на посетителя между группами по «сырым» данным. Сделать выводы и предположения.<br>\n",
+        "Посчитать статистическую значимость различий в среднем чеке заказа между группами по «сырым» данным. Сделать выводы и предположения.<br>\n",
+        "Посчитать статистическую значимость различий в среднем количестве заказов на посетителя между группами по «очищенным» данным. Сделать выводы и предположения.<br>\n",
+        "Посчитать статистическую значимость различий в среднем чеке заказа между группами по «очищенным» данным. Сделать выводы и предположения.<br>\n",
         "\n",
-        "Примите решение по результатам теста и объясните его. Варианты решений: 1. Остановить тест, зафиксировать победу одной из групп. 2. Остановить тест, зафиксировать отсутствие различий между группами. 3. Продолжить тест."
+        "Примять решение по результатам теста и объяснить его. Варианты решений: 1. Остановить тест, зафиксировать победу одной из групп. 2. Остановить тест, зафиксировать отсутствие различий между группами. 3. Продолжить тест."
       ]
     },
     {
@@ -2712,7 +2683,7 @@
         "id": "fd094331"
       },
       "source": [
-        "## 2.14. Примите решение по результатам теста и объясните его. Варианты решений:\n",
+        "## 2.14. Принять решение по результатам теста. Варианты решений:\n",
         "1. Остановить тест, зафиксировать победу одной из групп.\n",
         "2. Остановить тест, зафиксировать отсутствие различий между группами.\n",
         "3. Продолжить тест.\n",
