Создано с помощью Colaboratory

--- a/Churn_analysis_of_bank_customers/Анализ_оттока_клиентов_банка_Метанпром.ipynb
+++ b/Churn_analysis_of_bank_customers/Анализ_оттока_клиентов_банка_Метанпром.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Alexander-1380/Yandex_practicum/blob/main/%D0%90%D0%BD%D0%B0%D0%BB%D0%B8%D0%B7_%D0%BE%D1%82%D1%82%D0%BE%D0%BA%D0%B0_%D0%BA%D0%BB%D0%B8%D0%B5%D0%BD%D1%82%D0%BE%D0%B2_%D0%B1%D0%B0%D0%BD%D0%BA%D0%B0_%D0%9C%D0%B5%D1%82%D0%B0%D0%BD%D0%BF%D1%80%D0%BE%D0%BC.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Alexander-1380/Yandex_practicum/blob/main/Churn_analysis_of_bank_customers/%D0%90%D0%BD%D0%B0%D0%BB%D0%B8%D0%B7_%D0%BE%D1%82%D1%82%D0%BE%D0%BA%D0%B0_%D0%BA%D0%BB%D0%B8%D0%B5%D0%BD%D1%82%D0%BE%D0%B2_%D0%B1%D0%B0%D0%BD%D0%BA%D0%B0_%D0%9C%D0%B5%D1%82%D0%B0%D0%BD%D0%BF%D1%80%D0%BE%D0%BC.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -19,17 +19,17 @@
       "source": [
         "# Анализ оттока клиентов банка \"Метанпром\". (проект выполнен в рамках обучения в Яндекс Практикуме)\n",
         "\n",
-        "### Задача**:**\n",
+        "### Описание и цели проекта:\n",
         "\n",
-        "Проанализируйте клиентов регионального банка и выделите сегменты клиентов, которые склонны уходить из банка.\n",
+        "Проанализировать клиентов регионального банка и выделить сегменты клиентов, которые склонны уходить из банка.\n",
         "\n",
-        "- Проведите исследовательский анализ данных,\n",
-        "- Выделите портреты клиентов, которые склонны уходить из банка,\n",
-        "- Сформулируйте и проверьте статистические гипотезы.\n",
+        "- Провести исследовательский анализ данных,\n",
+        "- Выделить портреты клиентов, которые склонны уходить из банка,\n",
+        "- Сформулировать и проверить статистические гипотезы.\n",
         "    \n",
-        "    *Проверьте гипотезу различия дохода между теми клиентами, которые ушли и теми, которые остались.*\n",
+        "    *Гипотеза различия дохода между теми клиентами, которые ушли и теми, которые остались.*\n",
         "    \n",
-        "    *Сформулируйте и проверьте статистическую гипотезу относительно представленных данных*\n",
+        "    *Гипотеза различия баланса счета между теми клиентами, которые ушли и теми, которые остались.*\n",
         "    \n",
         "\n",
         "### Описание датасетов\n",
@@ -52,29 +52,7 @@
         "- `estimated_salary` — заработная плата клиента,\n",
         "- `Churn` — ушёл или нет.\n",
         "\n",
-        "По итогам исследования подготовьте презентацию. Для создания презентации используйте любой удобный инструмент, но отправить презентацию нужно **обязательно** в формате **pdf,** прикрепив ссылку на файл в основном проекте.\n",
-        "\n",
-        "### Данные:\n",
-        "\n",
-        "[bank_scrooge.csv](https://disk.yandex.ru/d/koh47_A61aYiYQ)\n",
-        "\n",
-        "### Дашборды\n",
-        "\n",
-        "Чтобы отправить дашборд, приложите к проекту ссылку на файл.\n",
-        "\n",
-        "Выберите один из наборов (выбор сделаем когда дойдем до этого пункта учитывая полученную к тому времени информацию):\n",
-        "\n",
-        "Набор №1\n",
-        "\n",
-        "1. Постройте диаграмму, отражающую количество клиентов в зависимости от числа используемых продуктов.\n",
-        "2. Добавьте индикатор процента ушедших клиентов.\n",
-        "3. Добавьте фильтр дашборда по городу.\n",
-        "\n",
-        "Набор №2\n",
-        "\n",
-        "1. Постройте диаграмму, отображающую распределение заработной платы клиентов.\n",
-        "2. Добавьте индикатор, отображающий процент клиентов, имеющих кредитную карту.\n",
-        "3. Добавьте фильтр дашборда, позволяющий выбрать ушёл клиент или нет."
+        "По итогам исследования подготовить презентацию.\n"
       ]
     },
     {
@@ -127,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "76690ab3",
       "metadata": {
         "id": "76690ab3",
@@ -190,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "riF75K9h-6v5",
       "metadata": {
         "colab": {
@@ -4482,14 +4460,22 @@
       "cell_type": "markdown",
       "source": [
         "## Материалы к проекту\n",
-        "* [Презентация](https://drive.google.com/file/d/1skDlKT6CUwxYHG3f7NzGyAvZub3Xcg4f/view?usp=share_link)\n",
-        "\n",
-        "* [Дэшборд](https://public.tableau.com/views/Book2_16813011253310/Dashboard1?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link)"
+        "* [Презентация](https://drive.google.com/file/d/1skDlKT6CUwxYHG3f7NzGyAvZub3Xcg4f/view?usp=share_link)\n"
       ],
       "metadata": {
         "id": "aEBlw1voDIQh"
       },
       "id": "aEBlw1voDIQh"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FmUC_6V17NCS"
+      },
+      "id": "FmUC_6V17NCS",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
